--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
-<!DOCTYPE html>
-<html lang="en-US">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="index.css" rel="stylesheet">
     <title>Sudoku</title>
   </head>
-    <body>
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
-        <script src="sudoku.js"></script>
-    </body>
+  <body onload="Game.startGame()">
+    <h1>Sudoku: </h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <table id="sudoku-table" class="table table-bordered">
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h1>Settings</h1>
+            </div>
+        </div>
+    </div>
+
+    <script src="sudoku.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </body>
 </html>
