--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Sudoku</title>
   </head>
   <body onload="Game.startGame()">
-    <h1>Sudoku: </h1>
+    <h1 id="Title" class="display-1">Sudoku: </h1>
     <div class="container">
         <div class="row">
             <div class="col">
@@ -20,10 +20,8 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-        <div class="row">
             <div class="col">
-                <h1>Settings</h1>
+                <h1 class="display-2">Settings/Options</h1>
             </div>
         </div>
     </div>
