fixed table width and button for mobile

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
         <div class="col text-center">
           <h1 class="display-3">Controls</h1>
           <p class="lead">Click on the grid and either use your keyboard or the buttons below to input digits.</p>
-          <div class="btn-group btn-group-lg" role="group" aria-label="Control buttons">
+          <div class="btn-group btn-group-lg" role="group" aria-label="Control buttons 1-4">
             <button type="button" class="btn btn-outline-info" onclick="Game.erase()">Erase</button>
             <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(1)">1</button>
             <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(2)">2</button>
             <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(3)">3</button>
             <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(4)">4</button>
+          </div>
+          <div class="btn-group btn-group-lg" role="group" aria-label="Control buttons 5-9">
             <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(5)">5</button>
             <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(6)">6</button>
             <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(7)">7</button>
