test alert for ios

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
               </fieldset>
               <div class="form-group row">
-                <div class="col">Show Incorrect Values <br /><em>(note: changing this only affects new inputs)</em></div>
+                <div class="col">Show Incorrect Values</em></div>
                 <div class="col-sm-10">
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="showIncorrectValues">
