--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="index.css" rel="stylesheet">
     <title>Sudoku</title>
   </head>
-  <body onload="alert('test')">
+  <body onload="alert(Game)">
     <!--Title and Description-->
     <div class="container TopContainer">
       <h1 id="Title" class="display-1">Sudoku: </h1>
