--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="index.css" rel="stylesheet">
     <title>Sudoku</title>
   </head>
-  <body onload="alert(Game)">
+  <body onload="console.log(Game)">
     <!--Title and Description-->
     <div class="container TopContainer">
       <h1 id="Title" class="display-1">Sudoku: </h1>
@@ -122,6 +122,12 @@
     </div>
 
     <script src="dist/main.js"></script>
+    <script>
+      if(Game == null || Game == undefined) {
+        console.log('error unable to load game');
+      }
+      console.log('end of custom script');
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
