--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
     <script src="dist/main.js"></script>
     <script>
       if(Game == null || Game == undefined) {
-        console.log('error unable to load game');
+        document.body.style.background = 'red';
       }
-      console.log('end of custom script');
+      document.body.style.background = 'blue';
+      alert(Game);
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
