--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="index.css" rel="stylesheet">
     <title>Sudoku</title>
   </head>
-  <body onload="Game.startGame()">
+  <body onload="game.startGame()">
     <!--Title and Description-->
     <div class="container TopContainer">
       <h1 id="Title" class="display-1">Sudoku: </h1>
@@ -29,7 +29,7 @@
           <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#SettingsModal">
             Settings/Options
           </button>
-          <button class="btn btn-outline-success" onclick="Game.newBoard()">Generate New Board</button>
+          <button class="btn btn-outline-success" onclick="game.newBoard()">Generate New Board</button>
         </div>
       </div>
       <div class="row">
@@ -43,22 +43,22 @@
           <h1 class="display-3">Controls</h1>
           <p class="lead">Click on the grid and either use your keyboard or the buttons below to input digits.</p>
           <div class="btn-group btn-group-lg" role="group" aria-label="Control buttons 1-4">
-            <button type="button" class="btn btn-outline-info" onclick="Game.erase()">Erase</button>
-            <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(1)">1</button>
-            <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(2)">2</button>
-            <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(3)">3</button>
-            <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(4)">4</button>
+            <button type="button" class="btn btn-outline-info" onclick="game.erase()">Erase</button>
+            <button type="button" class="btn btn-outline-light" onclick="game.updateCell(1)">1</button>
+            <button type="button" class="btn btn-outline-light" onclick="game.updateCell(2)">2</button>
+            <button type="button" class="btn btn-outline-light" onclick="game.updateCell(3)">3</button>
+            <button type="button" class="btn btn-outline-light" onclick="game.updateCell(4)">4</button>
           </div>
           <div class="btn-group btn-group-lg" role="group" aria-label="Control buttons 5-9">
-            <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(5)">5</button>
-            <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(6)">6</button>
-            <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(7)">7</button>
-            <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(8)">8</button>
-            <button type="button" class="btn btn-outline-light" onclick="Game.updateCell(9)">9</button>
+            <button type="button" class="btn btn-outline-light" onclick="game.updateCell(5)">5</button>
+            <button type="button" class="btn btn-outline-light" onclick="game.updateCell(6)">6</button>
+            <button type="button" class="btn btn-outline-light" onclick="game.updateCell(7)">7</button>
+            <button type="button" class="btn btn-outline-light" onclick="game.updateCell(8)">8</button>
+            <button type="button" class="btn btn-outline-light" onclick="game.updateCell(9)">9</button>
           </div>
           <div class="btn-group btn-group-lg" role="group" aria-label="Reset and Check Solution Buttons">
-            <button class="btn btn-outline-danger" onclick="Game.reset()">Reset Current Board</button>
-            <button type="button" class="btn btn-outline-success" onclick="Game.checkSolution()">Check Solution</button>
+            <button class="btn btn-outline-danger" onclick="game.reset()">Reset Current Board</button>
+            <button type="button" class="btn btn-outline-success" onclick="game.checkSolution()">Check Solution</button>
           </div>
         </div>
       </div>
@@ -114,8 +114,8 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="Game.closeSettings()">Close</button>
-            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="Game.changeSettings()">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="game.closeSettings()">Close</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="game.changeSettings()">Save changes</button>
           </div>
         </div>
       </div>
